dynamic-JRLJapan 1.11 released February 27, 2009

       52. Bug fixes and optimizations.
       51. Faster computations of jacobians in DynamicMultiBody.
       50. Adaptation to abstractRobotDynamics-1.12 changes.

dynamic-JRLJapan 1.10 released January 29, 2009

	49. Joint::m_StateVectorPosition is initialized in constructors.
	48. Changes to handle installation through cmake instead of autotools.
	47. bug fix: destructor of Body was called twice by destructors of
	    DynamicMultiBody and MultiBody.

dynamic-JRLJapan 1.9 released October 8, 2008

	46. Modified internal computations to include properly the acceleration
	    vector and added corresponding unit test.
	45. Added implementations of CjrlJoint::{upper|lower}VelocityBound()
	44. Fixed wrong computation of free-flyer contribution in jacobian of
	    center of mass.
	43. Plugged memory leaks and supressed valgrind warnings.
	42. Modifications to use fixed joints and fixed robots.

dynamic-JRLJapan 1.8 released April 4, 2008

        41. Joint::m_Name is set automatically if it is empty.
        40. Handle reduced map between the command vector and the joint space.
        39. Fixed bugs in DynamicMultiBody::NewtonEulerAlgorithm()
        38. Added property management.
        37. Implement setJointOrderInConfig()
        36. Bodies in DynamicMultiBody and MultiBody are managed by
            pointers.

dynamic-JRLJapan 1.7 released February 17, 2008

	35. Implementation of the joint construction through the abstract interfaces.
	  A dynamic model of robot can now be built using either of two methods:
	   1. through VRML parser,
	   2. through the robot dynamics abstract interface. See
	      documentation of DynamicMultiBody for information.
	34. Unit test TestBuildFromJointTreeMathieu now integrally builds
	    the copy of the humanoid robot through the abstract interface.
	33. Added dependence to MatrixAbstractLayer (removed from abstractRobotDynamics).