@@ -1,3 +1,6 @@
+
+	53. Fixed doc dependency to abstractRobotDynamics
+	
 dynamic-JRLJapan 1.11 released February 27, 2009
 
        52. Bug fixes and optimizations.
